add companies products
