# routes/routes_stage.routes.js
@@ -2,5 +2,5 @@ module.exports = app => {
     const controller = require("../controllers/routes_stage.controller.js");
     var router = require("express").Router();
     router.get("/", controller.findAll);
-    app.use('/api/routes_stage', router);
+    app.use('/api/reference/routes_stage', router);
 };
